# Learning-Programming-Languages

./: .gitignore  LICENSE  README.md
Bash/RandomOneOnInternet/: file.txt  read_file.sh
Batch/: unity_automatic_android_logcat.bat
C++/: hello_world.cpp
C++/CodesOutThere/: getTime  getTime.cpp  smart_pointers.cpp
C++/Hello World/: helloworld.cpp
C++/Programación ATS/: Apuntadores.cpp  ApuntadoresAsignacionDinamicaDeArreglos.cpp  ApuntadoresTransmisionDeArreglos.cpp  ApuntadoresTransmisionDeDirecciones.cpp  BuclesDoWhile.cpp  BuclesFor.cpp  BuclesWhile.cpp  BusquedaBinarial.cpp  BusquedaSecuencial.cpp  (+42 more)
CSS/: index.html
Dart/: 10_lexical_closures.dart  11_list_fixed_length.dart  12_list_growable.dart  13_maps_and_hashmap.dart  14_set_and_hashset.dart  15_callable_classes.dart  1_Hello_World.dart  2_Data_Types.dart  3_Conditional_Statements.dart  4_Loops_and_iterators.dart  5_Functions.dart  6_Exception_Handling.dart  7-1_Object_Oriented.dart  7-2_Object_Oriented.dart  7-3_Object_Oriented.dart  7-4_Object_Oriented.dart  7-5_Object_Oriented.dart  7-6_Object_Oriented.dart  7_Object_Oriented.dart  8_lambda_nameless_function.dart  9_higher_order_functions.dart
Elixir/: HelloWorld.exs
Latex/: hello-world.tex  invoice.tex  invoice_2.fdb_latexmk  invoice_2.fls  invoice_2.tex
PHP/: comparation_operators.php  first_page.php  function.php  second_page.php  static_varaibles.php  strings.php  third_page.php
Prolog/: progenitor.pl
Rust/: undefined_behaviour.cpp
Rust/rust_deserialize_json/: Cargo.toml
Rust/rust_deserialize_json/src/: main.rs
Solidity/: sum.sol
(+438 files in other folders)
