[package]
name = "rust_deserialize_json"
version = "0.1.0"
authors = ["Youngermaster <juanmanuel12.13jmyh81@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# serde = "1.0"
# serde_derive = "1.0"
# serde_json = "1.0"